--- a/CSS/afterCart.css
+++ b/CSS/afterCart.css
@@ -11,7 +11,10 @@
   cursor: pointer;
   outline: none;
 }
-
+#couponName {
+  font-weight: 600;
+  color: rgb(43, 214, 141);
+}
 .navText {
   font-family: sf pro text, -apple-system, BlinkMacSystemFont, Roboto, segoe ui,
     Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji,
