after_cart css changed

--- a/CSS/checkOut.css
+++ b/CSS/checkOut.css
@@ -631,3 +631,9 @@ header {
 .flexSum p {
   margin-bottom: 10px;
 }
+
+#notification {
+  margin: 20px auto;
+  text-align: center;
+  color: greenyellow;
+}
