--- a/CSS/afterCart.css
+++ b/CSS/afterCart.css
@@ -7,7 +7,8 @@
 /* html {
         font-family: "Roboto", sans-serif;
       } */
-.cursorPointer:hover {
+.cursorPointer:hover,
+.fade-2 {
   cursor: pointer;
   outline: none;
 }
