--- a/CSS/index.css
+++ b/CSS/index.css
@@ -782,7 +782,9 @@ input:focus {
 }
 
 .fade,
-.fade-2 {
+.fade-2,
+.fade-3 {
+  cursor: pointer;
   animation-name: fade;
   animation-duration: 1.5s;
 }
